# rust-typescript-mono

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/be/: Cargo.toml  README.md
apps/be/migrations/: 20230727134718_todos.sql
apps/be/src/: main.rs  utils.rs
apps/be/src/db/: mod.rs
apps/fe/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
apps/fe/src/app/: layout.tsx  page.tsx
apps/fe/src/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
apps/fe/src/components/ui/: MainLayout.tsx  MainNav.tsx  Search.tsx  UserNav.tsx
