[package]
name = "be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenvy = "0.15.7"
log = "0.4.19"
poem = { version = "1.3.57", features = ["anyhow"] }
poem-openapi = { version = "3.0.0", features = ["swagger-ui", "uuid"] }
sqlx = { version = "0.7.1", features = [
  "tls-rustls",
  "runtime-tokio",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "time",
] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
mono_types = { path = "../../packages/types" }
